# Muse

./: docker-compose.yml
backend/: .dockerignore  .gitignore  dockerfile  hosts.txt  migrate.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 14546df55af4_fixed_all_issues.py  16b50ab383e0_add_auth.py  33b31a1a21a6_change_email_to_username.py  3efae64e169c_database_creation.py  7646db565d79_fix_id_generation.py  8795729c0f79_fix_company_model_again.py  c6da8ec30829_add_description_to_musician.py  f6180c411b19_reorganize_records_and_releases.py  f6d20edfdaf4_fix_company_model.py
backend/database/schema/: current_schema.sql
backend/src/: config.py  database.py  dependencies.py  exceptions.py  main.py  schemas.py  utils.py
backend/src/auth/: dependencies.py  exceptions.py  models.py  router.py  schemas.py  service.py  utils.py
backend/src/company/: dependencies.py  models.py  router.py  schemas.py  service.py
backend/src/composition/: dependencies.py  models.py  router.py  schemas.py  service.py
backend/src/ensemble/: dependencies.py  models.py  router.py  schemas.py  service.py
backend/src/musician/: dependencies.py  models.py  router.py  schemas.py  service.py
backend/src/performance/: dependencies.py  models.py  router.py  schemas.py  service.py
backend/src/record/: dependencies.py  models.py  router.py  schemas.py  service.py
backend/src/release/: dependencies.py  models.py  router.py  schemas.py  service.py
backend/tests/: conftest.py
backend/tests/api/: ensemble_test.py  record_test.py  root_test.py
(+8 files in other folders)
